--- a/index.html
+++ b/index.html
@@ -41,20 +41,48 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h1>Java Annotation</h1>
+					<h3>Denpendency Injection and Beyond</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Created by <a href="http://hakim.se">Yong Fu</a> </small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
+					<h2>What is annotation?</h2>
 				</section>
 
+				<section>
+					<blockquote cite="http://www.merriam-webster.com/dictionary/annotation">
+						&ldquo; A note added to a text,book, drawing, etc., as a comment or explanation.&rdquo;
+					</blockquote>
+					<p align="right" style="color : steelblue"> Webster</p>
+				</section>
+
+				<section>
+					<blockquote cite="http://wikipedia/annotation">
+						&ldquo; An annotation is metadata (e.g. a comment, explanation, presentational markup) attached to text, image, or other data.&rdquo;
+					</blockquote>
+					<p align="right" style="color : steelblue"> Wikipedia</p>
+				</section>
+
+				<section>
+					<blockquote cite="http://wikipedia/annotation">
+						&ldquo;  A Metadata facility that enables you to embed supplemental information in a source file.&rdquo;
+					</blockquote>
+					<p align="right" style="color : steelblue"> Java Documents</p>
+
+				</section>
+
+				<section>
+					<h3>History of Java Annotation</h3>
+						<ul>
+						<li>JSR-175 : A Metadata Facility for the Java Programming Language</li>
+						<li>JSR-250 : Common Annotations</li>
+						<li>JSR-269 : Pluggable Annotation Processing API</li>
+						<li>Java 8 enhancements</li>
+						</ul>
+				</section>
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
